添加需求总结v0.1版本
添加需求总结v0.1版本，包括了后端开发时会用到的类的属性，以及初期开发的计划。后续开发详细计划会继续更新

--- a/需求总结v0.1.md
+++ b/需求总结v0.1.md
@@ -8,7 +8,7 @@
 
 ## 2. 业务功能图
 
-![alt](img\pic1.png)
+![alt](https://github.com/2021-software-training/2021-Software-Training/blob/main/img/pic1.png)
 
 <!-- ### 2.1 用户分类及其需求
 
@@ -206,9 +206,9 @@
 
 如图所示：
 
-![alt](img/pic2.png)
+![alt](https://github.com/2021-software-training/2021-Software-Training/blob/main/img/pic2.png)
 
-![alt](img/pic3.png)
+![alt](https://github.com/2021-software-training/2021-Software-Training/blob/main/img/pic3.png)
 
 #### 4.2.2 输入
 
@@ -268,7 +268,7 @@
 
 如图所示
 
-![alt](img/pic4.png)
+![alt](https://github.com/2021-software-training/2021-Software-Training/blob/main/img/pic4.png)
 
 #### 4.3.2 输入
 
